syntax = "proto3";

package chef.automate.domain.infra_proxy.request;
option go_package = "github.com/chef/automate/api/interservice/infra_proxy/request";

message Policyfiles {
    // ID of the chef organization.
    string org_id = 1;
    // ID of the chef infra server.
    string server_id = 2;
}

message Policyfile {
    // ID of the chef organization.
    string org_id = 1;
    // ID of the chef infra server.
    string server_id = 2;
    // Name of the policy file.
    string name = 3;
    // Revision ID of the policy file.
    string revision_id = 4;
}
